@@ -176,6 +176,24 @@ hcat.bin=/usr/local/hcat/bin/hcat
 
 #pig.load.default.statements=
 
+#####################################################################
+
+########### Override hadoop configs programatically #################
+
+# By default, Pig expects hadoop configs (hadoop-site.xml and core-site.xml)
+# to be present on the classpath. There are cases when these configs are 
+# needed to be passed programatically, such as while using the PigServer API.
+# In such cases, you can override hadoop configs by setting the property
+# "pig.use.overriden.hadoop.configs". 
+# 
+# When this property is set to true, Pig ignores looking for hadoop configs
+# in the classpath and instead picks it up from Properties/Configuration
+# object passed to it.
+
+# pig.use.overriden.hadoop.configs=false
+#
+######################################################################
+
 # Check if the script needs to check multiple stores writing
 # to the same location. When set to true, stops the execution
 # of script right away.
